<resources>
    <string name="app_name">test</string>
    <string name="accountLogin">账号密码登录</string>
    <string name="phoneLogin">手机快捷登录</string>
    <string name="inputPhone">请输入手机号</string>
    <string name="inputPsd">请输入密码</string>
    <string name="inputVerifyCode">请输入验证码</string>
    <string name="newPeopleRegister">新用户注册</string>
    <string name="userNamePsdLogin">用户名密码登录</string>
    <string name="inputPsdTips">请输入6-20位数字或字母组合密码</string>
    <string name="userAgreementTips">请阅读并同意以下内容</string>
    <string name="nextSteps">下一步</string>
    <string name="login">登录</string>1
    <string name="register">注册</string>
    <string name="confirmRegister">确认注册</string>
    <string name="confirm">确定</string>
    <string name="forgetPsd">忘记密码</string>
    <string name="thirdLogin">第三方登录</string>
    <string name="userAgreementContent">《用户协议及隐私政策》</string>
    <string name="back">返回</string>
    <string name="agreeAnContinue">同意并继续</string>
    <string name="getVerifyCode">获取验证码</string>
    <string name="submit">提交</string>
    <string name="publishJob">发布兼职</string>
    <string name="publishJobTitleOne">1/4 选择兼职类型</string>
    <string name="publishJobTitleTwo">2/4 完善基本信息</string>
    <string name="publishJobTitleThree">3/4 工作时间&amp;福利</string>
    <string name="publishJobTitleFour">4/4 联系信息</string>
    <string name="hotJobType">热门类型</string>
    <string name="moreJobType">更多类型</string>
    <string name="expend">展开</string>
    <string name="jobTitle">兼职标题</string>
    <string name="sexRequire">性别要求</string>
    <string name="jobPeoples">工作人数</string>
    <string name="jobAddress">工作地址</string>
    <string name="jobData">工作日期</string>
    <string name="jobTime">工作时间</string>
    <string name="jobMoney">基本工资</string>
    <string name="jobWelfare">基本福利\t (可多选)</string>
    <string name="jobDescription">职位描述</string>
    <string name="location">定位</string>
    <string name="contactsName">联系人</string>
    <string name="contactsPhone">联系电话</string>
    <string name="contactsEmail">联系邮箱</string>
    <string name="previewResume">预览简历</string>
    <string name="immediatelyPublish">立即发布</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="noSex">不限</string>
    <string name="contactsTips">默认使用匠小豆报名，同步到邮箱</string>
    <string name="jobPublishTips">小豆提示：凡收取费用的或工作内容不符的兼职，请你提高警惕并第一时间向我们举报。</string>
    <string name="protocolContent">《用户协议及隐私政策 》</string>
    <string name="searchHistory">搜索历史</string>
    <string name="searchHot">热门搜索</string>
    <string name="test_company_details">ViewPager像ListView 等控件一样，必须要对ViewPager设置PagerAdapter来完成页面数据的绑定，这个PagerAdapter是一个适配器基类，同样有ViewPager中承载Fragment页的适配器FragmentStatePagerAdapter 以及 FragmentPagerAdapter,实现一个最基本的PagerAdapter，需要实现以下4个方法,ViewPager加第三方库实现威信，或者豆瓣的主界面</string>
    <string name="screen">筛选</string>
    <string name="leftArrow"><![CDATA[<]]></string>
    <string name="rightArrow"><![CDATA[>]]></string>
    <string name="cancel">取消</string>
    <string name="myResume">我的简历</string>
    <string name="save">保存</string>
    <string name="userName">姓名</string>
    <string name="userSex">性别</string>
    <string name="pleaseSelectComplainType">请选择投诉类型</string>
</resources>
