<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:layout_height="200dp">
    <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="18dp"
            android:text="@string/userAgreementTips"
            android:textStyle="bold"
            android:textSize="@dimen/text_big_size"
            android:textColor="@color/text_default"
    />

    <TextView
            android:id="@+id/tvUserAgreementContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintLeft_toLeftOf="@id/title"
            android:text="@string/userAgreementContent"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_btn_size"
            android:layout_marginTop="20dp"
    />
    <TextView
            android:id="@+id/tvBack"
            android:layout_width="80dp"
            android:layout_height="45dp"
            app:layout_constraintTop_toBottomOf="@id/tvUserAgreementContent"
            app:layout_constraintLeft_toLeftOf="@id/title"
            android:layout_marginTop="35dp"
            android:text="@string/back"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:textSize="@dimen/text_default_size"
            android:background="@drawable/shape_circle_horn_hollow_rectangle"
    />
    <TextView
            android:id="@+id/tvContinue"
            android:layout_width="250dp"
            android:layout_height="45dp"
            app:layout_constraintTop_toTopOf="@id/tvBack"
            app:layout_constraintLeft_toRightOf="@id/tvBack"
            android:text="@string/agreeAnContinue"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:textSize="@dimen/text_default_size"
            android:background="@drawable/shape_circle_horn_solid_rectangle"
    />
</androidx.constraintlayout.widget.ConstraintLayout>