<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@drawable/shape_dialog_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="15dp"
            android:text="请选择"
            android:textColor="@color/text_default"
            android:textSize="@dimen/text_default_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/text_light_color" />

        <TextView
            android:id="@+id/tvNoSex"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/shape_item_touch_bg"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/noSex"
            android:textColor="@color/text_default"
            android:textSize="@dimen/text_default_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/text_light_color" />

        <TextView
            android:id="@+id/tvBoy"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/shape_item_touch_bg"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/boy"
            android:textColor="@color/text_default"
            android:textSize="@dimen/text_default_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/text_light_color" />

        <TextView
            android:id="@+id/tvGirl"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/shape_item_touch_bg"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/girl"
            android:layout_marginBottom="8dp"
            android:textColor="@color/text_default"
            android:textSize="@dimen/text_default_size" />
    </LinearLayout>
</FrameLayout>