<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_close" />

            <TextView
                android:id="@+id/tvPhoneLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="@string/phoneLogin"
                android:textColor="@color/text_default"
                android:textSize="@dimen/text_default_size" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/userNamePsdLogin"
        android:textColor="@color/text_default"
        android:textSize="@dimen/text_big_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar" />

    <LinearLayout
        android:id="@+id/rlInputParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:id="@+id/phoneHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/shape_gray_circle_rectage"
                android:paddingLeft="10dp"
                android:paddingTop="2dp"
                android:paddingRight="10dp"
                android:paddingBottom="2dp"
                android:text="+86"
                android:textSize="@dimen/text_small_size" />

            <EditText
                android:id="@+id/etInputPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@id/phoneHead"
                android:layout_toRightOf="@id/phoneHead"
                android:background="@null"
                android:hint="@string/inputPhone"
                android:maxLines="1"
                android:textColor="@color/text_default"
                android:textColorHint="@color/text_hint"
                android:textSize="@dimen/text_default_size" />

            <View
                style="@style/DividerLineTheme"
                android:layout_alignParentBottom="true" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/inputPsd"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/text_default"
                android:textColorHint="@color/text_hint"
                android:textSize="@dimen/text_default_size" />

            <View
                style="@style/DividerLineTheme"
                android:layout_alignParentBottom="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"

                android:gravity="center_vertical">

                <FrameLayout
                    android:id="@+id/flEyeParent"
                    android:layout_width="40dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/ivEye"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/icon_eye_close" />
                </FrameLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/divider_line" />

                <TextView
                    android:id="@+id/tvForgetPsd"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="@string/forgetPsd"
                    android:textColor="@color/text_default"
                    android:textSize="@dimen/text_small_size" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/select_button_bg"
        android:enabled="false"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_default_size"
        app:layout_constraintTop_toBottomOf="@id/rlInputParent" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="新用户注册"
        android:textColor="@color/text_new_user_register"
        android:textSize="@dimen/text_small_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogin" />

    <include layout="@layout/view_third_login" />
</androidx.constraintlayout.widget.ConstraintLayout>