<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionBarHeight"
            android:id="@+id/toolBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent">
        <FrameLayout
                android:id="@+id/flBack"
                android:layout_width="60dp"
                android:layout_height="match_parent">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_back"
                    android:layout_gravity="center_vertical"
            />
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>
    <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolBar"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="18dp"
            android:text="@string/inputPsd"
            android:textStyle="bold"
            android:textSize="@dimen/text_big_size"
            android:textColor="@color/text_default"
    />

    <LinearLayout
            android:id="@+id/rlInputParent"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical"
            android:layout_margin="18dp">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp">
            <TextView
                    android:id="@+id/phoneHead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/shape_gray_circle_rectage"
                    android:text="+86"
                    android:textSize="@dimen/text_small_size"
            />

            <EditText
                    android:id="@+id/etInputPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:inputType="phone"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/phoneHead"
                    android:layout_toEndOf="@id/phoneHead"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/inputPhone"
                    android:textColorHint="@color/text_hint"
                    android:textColor="@color/text_default"
                    android:textSize="@dimen/text_default_size"
            />
            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:layout_alignParentBottom="true"
                  android:background="@color/divider_line"
            />


        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="45dp">

            <EditText
                    android:id="@+id/etCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:layout_centerVertical="true"
                    android:hint="@string/inputVerifyCode"
                    android:textColorHint="@color/text_hint"
                    android:textColor="@color/text_default"
                    android:textSize="@dimen/text_default_size"
            />
            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:layout_alignParentBottom="true"
                  android:background="@color/divider_line"
            />
            <TextView
                    android:id="@+id/tvGetCode"
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/getVerifyCode"
                    android:textSize="@dimen/text_small_size"
                    android:gravity="center"
                    android:enabled="false"
                    android:textColor="@color/white"
                    android:background="@drawable/shape_get_verify_code_bg"
            />
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="45dp">

            <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:layout_centerVertical="true"
                    android:hint="@string/inputPsd"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:textColorHint="@color/text_hint"
                    android:textColor="@color/text_default"
                    android:textSize="@dimen/text_default_size"
            />
            <View android:layout_width="match_parent"
                  android:layout_height="1dp"
                  android:layout_alignParentBottom="true"
                  android:background="@color/divider_line"
            />

        </RelativeLayout>
    </LinearLayout>


    <TextView
            android:id="@+id/tvSubmit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/rlInputParent"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="25dp"
            android:textColor="@color/white"
            android:text="@string/submit"
            android:gravity="center"
            android:enabled="false"
            android:textSize="@dimen/text_btn_size"
            android:background="@drawable/shape_button_default"
    />

</androidx.constraintlayout.widget.ConstraintLayout>